--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=invoicer
 
-# Configuración H2 Database
+spring.jpa.defer-datasource-initialization=true
+server.port=8080
 spring.datasource.url=jdbc:h2:mem:invoicer_db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
