--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=invoicer
 
 spring.jpa.defer-datasource-initialization=true
 server.port=8080
-spring.datasource.url=jdbc:h2:mem:invoicer_db
+spring.datasource.url=jdbc:h2:mem:invoicer_db;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
