--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,5 +26,8 @@ spring.thymeleaf.encoding=UTF-8
 # Security
 logging.level.org.springframework.security=DEBUG
 
+# Logging pattern
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] [%X{user}] [%X{session}] %-5level %logger{36} - %msg%n
+
 # Server Configuration
 server.port=8080
