Enable ANSI log colours

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,9 @@ spring.thymeleaf.encoding=UTF-8
 logging.level.org.springframework.security=DEBUG
 
 # Logging pattern
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] [%X{user}] [%X{session}] %-5level %logger{36} - %msg%n
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] [%X{user}] [%X{session}] %highlight(%-5level) %logger{36} - %msg%n
+# Enable ANSI colours in the console output
+spring.output.ansi.enabled=ALWAYS
 
 # Server Configuration
 server.port=8080
