properties clean up

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=invoicer
 
+# Server Configuration
 server.port=8080
+
+# DB Configuration
 spring.datasource.url=jdbc:h2:mem:invoicer_db;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -12,6 +15,7 @@ spring.resources.add-mappings=false
 
 # JPA Configuration
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=none
 spring.sql.init.mode=always
 spring.jpa.show-sql=true
@@ -29,5 +33,3 @@ logging.level.org.springframework.security=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] [%X{user}] [%X{session}] %highlight(%-5level) %logger{36} - %msg%n
 # Enable ANSI colours in the console output
 spring.output.ansi.enabled=ALWAYS
-
-# Server Configuration
