--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,11 +14,9 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
 
 # JPA Configuration
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.defer-datasource-initialization=true
+#spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=none
 spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
@@ -28,7 +26,7 @@ spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
 
 # Security
-logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security=info
 
 # Logging pattern
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] [%X{user}] [%X{session}] %highlight(%-5level) %logger{36} - %msg%n
