--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=invoicer
+# Default to the development profile if none is set
+spring.profiles.active=dev
 
 # Server Configuration
 server.port=8080
