Add Verifactu test endpoint

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:h2:mem:invoicer_test_db;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=password
 
+# Endpoint for the Verifactu test environment
+verifactu.url=https://verifactu-test.example.com/api
+
