--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.resources.add-mappings=false
 
 # JPA Configuration
 #spring.jpa.defer-datasource-initialization=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
