--- a/pom.xml
+++ b/pom.xml
@@ -104,11 +104,17 @@
 		</dependency>
 
 		<!-- Dependencias para firma digital (ej. Apache Santuario) -->
-		<dependency>
-			<groupId>org.apache.santuario</groupId>
-			<artifactId>xmlsec</artifactId>
-			<version>4.0.0</version>
-		</dependency>
+                <dependency>
+                        <groupId>org.apache.santuario</groupId>
+                        <artifactId>xmlsec</artifactId>
+                        <version>4.0.0</version>
+                </dependency>
+                <!-- Generación de PDFs -->
+                <dependency>
+                        <groupId>com.github.librepdf</groupId>
+                        <artifactId>openpdf</artifactId>
+                        <version>1.3.33</version>
+                </dependency>
 
 
 	</dependencies>
