--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,9 @@ spring.sql.init.mode=always
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+# Spring Session
+spring.session.jdbc.initialize-schema=always
+
 # Thymeleaf Configuration
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML
