--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:h2:mem:invoicer_dev_db;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=password
 
+# In development expose all actuator endpoints
+management.endpoints.web.exposure.include=*
+
