--- a/src/main/resources/application-live.properties
+++ b/src/main/resources/application-live.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:h2:mem:invoicer_live_db;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=password
 
+# Only expose basic actuator endpoints in production
+management.endpoints.web.exposure.include=health,info
+
