--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -6,3 +6,6 @@ spring.datasource.password=password
 # Endpoint for the Verifactu test environment
 verifactu.url=https://verifactu-test.example.com/api
 
+# Expose all endpoints during testing
+management.endpoints.web.exposure.include=*
+
