--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,8 @@ logging.level.org.springframework.security=info
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] [%X{user}] [%X{session}] %highlight(%-5level) %logger{36} - %msg%n
 # Enable ANSI colours in the console output
 spring.output.ansi.enabled=ALWAYS
+
+# Actuator configuration
+management.endpoints.web.base-path=/actuator
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=when_authorized
